Limit guava usage in favour of standard library methods